# Memoria

./: .env.example  .gitignore  .mergify.yml  CHANGELOG.md  Makefile  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml
.github/workflows/: release-npm.yml  release-rust.yml
.kiro/steering/: goal-driven-evolution.md  setup.md
assets/: README.md
docs/: memory-ability-taxonomy.md
memoria/: Cargo.toml  cli.py  config.py
memoria/api/: database.py  dependencies.py  main.py  middleware.py  models.py
memoria/api/routers/: admin.py  memory.py
memoria/core/: scheduler.py  tiered_loader.py
memoria/core/auth/: encryption.py
memoria/core/embedding/: __init__.py
memoria/core/memory/: canonical_storage.py  config.py  editor.py  interfaces.py  types.py
memoria/core/memory/benchmark/: executor.py  schema.py
memoria/core/memory/graph/: graph_builder.py  graph_store.py  retriever.py  service.py  types.py
memoria/core/memory/models/: _sa_types.py
memoria/core/memory/strategy/: activation_v1.py
memoria/core/memory/tabular/: governance.py  retriever.py  service.py
memoria/crates/memoria-api/src/: auth.rs  lib.rs  state.rs
memoria/crates/memoria-api/src/routes/: admin.rs  governance.rs  memory.rs  metrics.rs  plugins.rs  sessions.rs  snapshots.rs
memoria/crates/memoria-api/tests/: api_db_verify.rs  api_e2e.rs
memoria/crates/memoria-cli/: Cargo.toml
memoria/crates/memoria-cli/src/: main.rs
memoria/crates/memoria-core/src/: lib.rs
memoria/crates/memoria-mcp/src/: git_tools.rs  tools.rs
memoria/crates/memoria-mcp/tests/: core_tools_e2e.rs  edit_log_e2e.rs  snapshot_e2e.rs
memoria/crates/memoria-service/src/: governance.rs  pipeline.rs  service.rs
memoria/crates/memoria-storage/src/: lib.rs  migration.rs  store.rs
memoria/crates/memoria-storage/src/graph/: store.rs
memoria/crates/memoria-storage/tests/: store_crud.rs  vector_index_ops.rs
memoria/datasets/: forget-v1.json  graph-entity-v1.json  graph-entity-v2.json
memoria/docs/: git-for-data-rfc.md
memoria/mcp_cloud/: server.py
memoria/mcp_local/: server.py
memoria/templates/: claude_rule.md  cursor_rule.md  kiro_steering.md
memoria/tests/: test_incremental_governance.py
plugins/openclaw/: openclaw.plugin.json  package.json
scripts/: install.sh
tests/integration/: test_db_field_verification.py  test_graph_db_e2e.py
tests/unit/: test_activation_regressions.py  test_memory_retriever.py
